# nanograd

./: .readthedocs.yml  CMakeLists.txt  LICENSE  pyproject.toml
.github/workflows/: build-and-deploy.yml  build-and-publish.yml  test-nanograd.yml  testing-nanograd-core.yml
docs/: conf.py  environment.yml  index.rst  nanograd_bgriebel.rst
examples/: nanograd_nn_example.ipynb
src/: CMakeLists.txt  main.cpp  nanograd_bg_bind.cpp  nanograd_bind.cpp
src/nanograd/: __init__.py  _core.engine.pyi
src/nanograd_bg/: __init__.py
src/nanograd_bgriebel/: __init__.py
src/nanograd_core/: CMakeLists.txt  engine.cpp  engine.h  nn.cpp  nn.h
src/stubs/: engine.pyi  nn.pyi
tests/: CMakeLists.txt  test_engine.cpp  test_nn.cpp
tests/test_nanograd/test_engine/: test_engine.py  test_nn.py
tests/test_nanograd/test_nn/: test_nn.py
