[project]
name = "nanograd"
version = "0.1.0"
description = "Automatic Differentiation Engine"
readme = "README.md"
authors = [{ name = "Braden Griebel", email = "bgriebel@uw.edu" }]
requires-python = ">=3.10"
dependencies = []


[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"

[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"
