[project]
name = "nanograd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Braden Griebel", email = "bgriebel@uw.edu" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
nanograd = "nanograd:main"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"

[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"
